Fixed popup image bug on iphone

--- a/resources/scss/popup.scss
+++ b/resources/scss/popup.scss
@@ -378,7 +378,7 @@
   order: 1;
  }
  @media (max-width: $mobile) {
-  max-height: 240px;
+  //max-height: 240px;
  }
  .popup__img-body-icon{
   width: 100%;
